# skunk

./: .gitignore  .gitmodules  CMakeLists.txt  README-simple-guide.md  README.md  nginx.conf
cpp_web_service/: main.cpp
docs/: add_basic_cmake_build_to_libdap.md  basic-web-services-with-cpp-httplib.md  cpp-httplib-doc-sources.md  libdap_as_external_with_cmake.md  project-structure.md  requirements.md  simple-guide.md
services/opendap/: CMakeLists.txt  OpendapService.cpp  OpendapService.h
services/opendap/src/: DataAccess.cpp  DataAccess.h  DataAccessNetCDF.cpp  DataAccessNetCDF.h  OpendapService.cpp  handler.cpp  handler.h  opendap_service.cpp
services/opendap/src/netcdf/: version_updated
services/opendap/src/netcdf/tests/: Makefile  Makefile.in  atconfig  nc4_netcdf_handler_tests  netcdf_handlerTest  testsuite
services/opendap/test/: test_handler.cpp
services/teapot/: CMakeLists.txt
services/teapot/src/: teapot.cpp
src/: DataAccess.h  OpendapService.cpp  OpendapService.h  ServiceBase.cpp  ServiceBase.h
